5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1846_2603.log
== TEST (2019-06-24 18:59:05) 
-- CODE:
from numpy import *
m=array(eval(input()))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 18:59:26) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:03:04) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=array(eval(m[:,i]))


print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:03:41) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=array(eval(m[0,:]))


print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:03:54) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=array(eval(m[:,0]))


print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:05:33) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=(m[:,0])


print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:05:52) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=array(eval(m[:,0]))


print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:06:19) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]


print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:06:41) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,1]


print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:13:48) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,;]


print(vet)
-- ERROR:
File "XXXX", line 3
    vet=m[0,;]
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:13:52) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,:]


print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:14:32) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,:]
vet1=m(1,:)

print(vet1)
-- ERROR:
File "XXXX", line 4
    vet1=m(1,:)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:15:38) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,:]
vet1=m[1,:]

print(vet1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:16:36) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,:]
vet1=m[1,:]
vet2=m[2,:]
vet3=m[3,:]

print(vet3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:18:16) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]

print(vet3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:18:59) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]

print(vet3.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:20:14) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]

print(vet3.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:21:16) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,:]
vet1=m[1,:]
vet2=m[2,:]
vet3=m[3,:]

print(vet3.T)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:21:33) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[0,:]
vet1=m[1,:]
vet2=m[2,:]
vet3=m[3,:]

print(vet3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:22:52) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]

print(vet3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:24:02) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]

print(vet3=sorted(vetor,reverse=True))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:24:56) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet3=sorted(vetor,reverse=True)
print(vet3=sorted(vetor3,reverse=True))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:25:41) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]

print(vet3=sorted(vet3,reverse=True))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:26:21) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet3=sorted(vet3,reverse=True)
print(vet3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:28:41) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:29:04) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)

print(vet1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:29:37) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)

print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:29:46) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)

print(vet3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:31:11) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet,vet1,vet2,vet3]]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:31:11) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet,vet1,vet2,vet3]]
print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:34:58) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet,vet1,vet2,vet3]]

print(mm)
-- EXECUTION TIME:
1.11805
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[[4, 3, 2, 1], [4, 3, 2, 1], [4, 3, 2, 1], [4, 3, 2, 1]]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[[4, 3, 2, 1], [4, 3, 2, 1], [4, 3, 2, 1], [3, 3, 3, 3]]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:34:59) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet,vet1,vet2,vet3]]

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:50:52) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet],[vet1],[vet2],[vet3]]

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:51:50) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet],[vet1],[vet2],[vet3]]

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:53:22) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[vet],[vet1],[vet2],[vet3]

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:53:53) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=[[vet],[vet1],[vet2],[vet3]]

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:55:29) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array(eval([[vet],[vet1],[vet2],[vet3]]))

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:55:43) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array(eval([[vet],[vet1],[vet2],[vet3]]))

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:56:24) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array([vet],[vet1],[vet2],[vet3])

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:56:42) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array([[vet],[vet1],[vet2],[vet3]])

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 19:57:07) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array([[vet],[vet1],[vet2],[vet3]])

print(mm)
-- EXECUTION TIME:
1.30484
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[[4 3 2 1]]

 [[4 3 2 1]]

 [[4 3 2 1]]

 [[4 3 2 1]]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[[4 3 2 1]]

 [[4 3 2 1]]

 [[4 3 2 1]]

 [[3 3 3 3]]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 19:57:08) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array([[vet],[vet1],[vet2],[vet3]])

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:40:38) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array([[vet],[vet1],[vet2],[vet3]])

print(mm)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 17:41:11) 
-- CODE:
from numpy import *
m=array(eval(input("matriz: ")))
vet=m[:,0]
vet1=m[:,1]
vet2=m[:,2]
vet3=m[:,3]
vet=sorted(vet,reverse=True)
vet1=sorted(vet1,reverse=True)
vet2=sorted(vet2,reverse=True)
vet3=sorted(vet3,reverse=True)
mm=array([[vet],[vet1],[vet2],[vet3]])

print(mm)
-- EXECUTION TIME:
1.12909
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[[4 3 2 1]]

 [[4 3 2 1]]

 [[4 3 2 1]]

 [[4 3 2 1]]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[[4 3 2 1]]

 [[4 3 2 1]]

 [[4 3 2 1]]

 [[3 3 3 3]]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:47:00) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)

for i in range(linhas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[:j]
		
	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:47:43) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)

for j in range(colunas):
	vetor_nulo[j] = matriz[:j]
		
vetor_nulo = sorted(vetor_nulo, reverse=True)
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:48:02) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)

for j in range(colunas):
	vetor_nulo[j] = matriz[:,j]
		
vetor_nulo = sorted(vetor_nulo, reverse=True)
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:49:26) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)

for j in range(3):
	vetor_nulo[j] = matriz[:, j]
		
vetor_nulo = sorted(vetor_nulo, reverse=True)
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:49:49) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(3, dtype=int)

for j in range(3):
	vetor_nulo[j] = matriz[:, j]
		
vetor_nulo = sorted(vetor_nulo, reverse=True)
	
print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:51:30) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(3, dtype=int)
for i in range(3):
	
	for j in range(3):
		vetor_nulo[j] = matriz[:, j]

	vetor_nulo = sorted(vetor_nulo, reverse=True)

print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:51:47) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(3, dtype=int)
for i in range(3):
	for j in range(3):
		vetor_nulo[j] = matriz[i, j]

	vetor_nulo = sorted(vetor_nulo, reverse=True)

print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:52:17) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[i, j]

	vetor_nulo = sorted(vetor_nulo, reverse=True)

print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:52:24) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[i, j]

	vetor_nulo = sorted(vetor_nulo, reverse=True)

	print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:54:00) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]

vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)

	print(vetor_nulo)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:56:14) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	matriz_nula[i] = vetor_nulo
	
	print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:56:39) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	matriz_nula[i] = vetor_nulo.T
	
	print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:57:13) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	matriz_nula[j, i] = vetor_nulo
	
	print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:57:26) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	matriz_nula[:, i] = vetor_nulo
	
	print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:57:47) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)


for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	matriz_nula[:, i] = vetor_nulo
	
	print(matriz_nula)
-- EXECUTION TIME:
0.954434
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 0 0 0]
 [3 0 0 0]
 [2 0 0 0]
 [1 0 0 0]]
[[4 4 0 0]
 [3 3 0 0]
 [2 2 0 0]
 [1 1 0 0]]
[[4 4 4 0]
 [3 3 3 0]
 [2 2 2 0]
 [1 1 1 0]]
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 0 0 0]
 [3 0 0 0]
 [2 0 0 0]
 [1 0 0 0]]
[[4 4 0 0]
 [3 3 0 0]
 [2 2 0 0]
 [1 1 0 0]]
[[4 4 4 0]
 [3 3 3 0]
 [2 2 2 0]
 [1 1 1 0]]
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:58:02) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)


for i in range(colunas):
	for j in range(colunas):
		vetor_nulo[j] = matriz[j, i]

	vetor_nulo = sorted(vetor_nulo, reverse=True)
	
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- EXECUTION TIME:
1.14402
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:49:10) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- EXECUTION TIME:
1.27249
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:49:11) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:49:17) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, colunas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- EXECUTION TIME:
1.03596
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:49:48) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, linhas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 23:49:51) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, linhas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- EXECUTION TIME:
1.17718
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 23:58:55) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, linhas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 00:00:37) 
-- CODE:
from numpy import *
matriz = array(eval(input("matriz: ")))
linhas = shape(matriz)[0]
colunas = shape(matriz)[1]
matriz_nula = zeros((linhas, linhas), dtype=int)
vetor_nulo = zeros(colunas, dtype=int)
for i in range(colunas):
	for j in range(colunas):
# Atribuir cada coluna ao vetor nulo
		vetor_nulo[j] = matriz[j, i]
# Ordenando o vetor
	vetor_nulo = sorted(vetor_nulo, reverse=True)
# Atribuindo o vetor na matriz
	matriz_nula[:, i] = vetor_nulo
	
print(matriz_nula)
-- EXECUTION TIME:
1.11184
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
